@@ -1,0 +1,388 @@
+begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
+begin_package
+DECL|package|org.apache.lucene.index
+package|package
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+package|;
+end_package
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|File
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|FileNotFoundException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+
+begin_import
+import|import
+name|junit
+operator|.
+name|framework
+operator|.
+name|TestCase
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|IndexModifier
+import|;
+end_import
+
+begin_comment
+comment|/**  * This tests the patch for issue #LUCENE-715 (IndexWriter does not  * release its write lock when trying to open an index which does not yet  * exist).  *  * @author mbogosian  * @version $Id$  */
+end_comment
+
+begin_class
+DECL|class|TestIndexWriterLockRelease
+specifier|public
+class|class
+name|TestIndexWriterLockRelease
+extends|extends
+name|TestCase
+block|{
+DECL|field|__test_dir
+specifier|private
+name|java
+operator|.
+name|io
+operator|.
+name|File
+name|__test_dir
+decl_stmt|;
+DECL|method|setUp
+specifier|public
+name|void
+name|setUp
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+if|if
+condition|(
+name|this
+operator|.
+name|__test_dir
+operator|==
+literal|null
+condition|)
+block|{
+name|String
+name|tmp_dir
+init|=
+name|System
+operator|.
+name|getProperty
+argument_list|(
+literal|"java.io.tmpdir"
+argument_list|,
+literal|"tmp"
+argument_list|)
+decl_stmt|;
+name|this
+operator|.
+name|__test_dir
+operator|=
+operator|new
+name|File
+argument_list|(
+name|tmp_dir
+argument_list|,
+literal|"testIndexWriter"
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|this
+operator|.
+name|__test_dir
+operator|.
+name|exists
+argument_list|()
+condition|)
+block|{
+throw|throw
+operator|new
+name|IOException
+argument_list|(
+literal|"test directory \""
+operator|+
+name|this
+operator|.
+name|__test_dir
+operator|.
+name|getPath
+argument_list|()
+operator|+
+literal|"\" already exists (please remove by hand)"
+argument_list|)
+throw|;
+block|}
+if|if
+condition|(
+operator|!
+name|this
+operator|.
+name|__test_dir
+operator|.
+name|mkdirs
+argument_list|()
+operator|&&
+operator|!
+name|this
+operator|.
+name|__test_dir
+operator|.
+name|isDirectory
+argument_list|()
+condition|)
+block|{
+throw|throw
+operator|new
+name|IOException
+argument_list|(
+literal|"unable to create test directory \""
+operator|+
+name|this
+operator|.
+name|__test_dir
+operator|.
+name|getPath
+argument_list|()
+operator|+
+literal|"\""
+argument_list|)
+throw|;
+block|}
+block|}
+block|}
+DECL|method|tearDown
+specifier|public
+name|void
+name|tearDown
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+if|if
+condition|(
+name|this
+operator|.
+name|__test_dir
+operator|!=
+literal|null
+condition|)
+block|{
+name|File
+index|[]
+name|files
+init|=
+name|this
+operator|.
+name|__test_dir
+operator|.
+name|listFiles
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|files
+operator|.
+name|length
+condition|;
+operator|++
+name|i
+control|)
+block|{
+if|if
+condition|(
+operator|!
+name|files
+index|[
+name|i
+index|]
+operator|.
+name|delete
+argument_list|()
+condition|)
+block|{
+throw|throw
+operator|new
+name|IOException
+argument_list|(
+literal|"unable to remove file in test directory \""
+operator|+
+name|this
+operator|.
+name|__test_dir
+operator|.
+name|getPath
+argument_list|()
+operator|+
+literal|"\" (please remove by hand)"
+argument_list|)
+throw|;
+block|}
+block|}
+if|if
+condition|(
+operator|!
+name|this
+operator|.
+name|__test_dir
+operator|.
+name|delete
+argument_list|()
+condition|)
+block|{
+throw|throw
+operator|new
+name|IOException
+argument_list|(
+literal|"unable to remove test directory \""
+operator|+
+name|this
+operator|.
+name|__test_dir
+operator|.
+name|getPath
+argument_list|()
+operator|+
+literal|"\" (please remove by hand)"
+argument_list|)
+throw|;
+block|}
+block|}
+block|}
+DECL|method|testIndexWriterLockRelease
+specifier|public
+name|void
+name|testIndexWriterLockRelease
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|IndexModifier
+name|im
+decl_stmt|;
+try|try
+block|{
+name|im
+operator|=
+operator|new
+name|IndexModifier
+argument_list|(
+name|this
+operator|.
+name|__test_dir
+argument_list|,
+operator|new
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
+name|standard
+operator|.
+name|StandardAnalyzer
+argument_list|()
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|FileNotFoundException
+name|e
+parameter_list|)
+block|{
+try|try
+block|{
+name|im
+operator|=
+operator|new
+name|IndexModifier
+argument_list|(
+name|this
+operator|.
+name|__test_dir
+argument_list|,
+operator|new
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
+name|standard
+operator|.
+name|StandardAnalyzer
+argument_list|()
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|FileNotFoundException
+name|e1
+parameter_list|)
+block|{             }
+block|}
+block|}
+block|}
+end_class
+
+end_unit
+
